2007-08-04  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Extensions/ipy_profile_doctest.py: New profile for
	doctest support.  It sets prompts/exceptions as similar to
	standard Python as possible, so that ipython sessions in this
	profile can be easily pasted as doctests with minimal
	modifications.  It also enables pasting of doctests from external
	sources (even if they have leading whitespace), so that you can
	rerun doctests from existing sources.

	* IPython/iplib.py (_prefilter): fix a buglet where after entering
	some whitespace, the prompt would become a continuation prompt
	with no way of exiting it other than Ctrl-C.  This fix brings us
	into conformity with how the default python prompt works.

	* IPython/Extensions/InterpreterPasteInput.py (prefilter_paste):
	Add support for pasting not only lines that start with '>>>', but
	also with ' >>>'.  That is, arbitrary whitespace can now precede
	the prompts.  This makes the system useful for pasting doctests
	from docstrings back into a normal session.

2007-08-02  Fernando Perez  <Fernando.Perez@colorado.edu>

	* IPython/Shell.py (IPShellEmbed.__call__): fix bug introduced in
	r1357, which had killed multiple invocations of an embedded
	ipython (this means that example-embed has been broken for over 1
	year!!!).  Rather than possibly breaking the batch stuff for which
	the code in iplib.py/interact was introduced, I worked around the
	problem in the embedding class in Shell.py.  We really need a
	bloody test suite for this code, I'm sick of finding stuff that
	used to work breaking left and right every time I use an old
	feature I hadn't touched in a few months.
	(kill_embedded): Add a new magic that only shows up in embedded
	mode, to allow users to permanently deactivate an embedded instance.

2007-08-01  Ville Vainio  <vivainio@gmail.com>

	* iplib.py, ipy_profile_sh.py (runlines): Fix the bug where raw
        history gets out of sync on runlines (e.g. when running macros).
